Fixed notes not showing up after being logged in and refreshing. Style tweaks.

--- a/src/App.css
+++ b/src/App.css
@@ -59,20 +59,25 @@ header h1 {
 }
 header nav a {
     display: inline-block;
+    text-align: center;
     padding: .5em 1em;
     text-decoration: none;
-    border: 2px outset aliceblue;
+    border-radius: 2px;
     color: #333;
     font-weight: bold;
     background-color: aliceblue;
     background-image: linear-gradient(aliceblue, lightblue);
-    transition: all 200ms;
+    text-transform: uppercase;
+    letter-spacing: 1px;
 }
 header nav a:last-child {
     margin-left: 1.5em;
 }
-header nav a:hover {
-    color: dodgerblue;
+header nav a:first-child:hover {
+    background-image: linear-gradient(white,  rgba(250, 249, 170, 0.75));
+}
+header nav a:last-child:hover {
+    background-image: linear-gradient(white,  rgba(250, 170, 170, 0.75));
 }
 /* MQ */
 @media screen and (min-width: 768px) {
@@ -136,12 +141,14 @@ header nav a:hover {
     height: 45px;
     background-color: white;
     border: 2px solid #ccc;
+    border-radius: 4px;
     padding: 5px 10px;
     width: 100%;
 }
 .notes article textarea {
     min-height: 150px;
     padding-top: 10px;
+    resize: vertical;
 }
 .notes article input:active,
 .notes article input:focus,
@@ -155,15 +162,14 @@ header nav a:hover {
     font-size: 20px;
     height: 60px;
     color: #333;
-    background-color: aliceblue;
-    background-image: linear-gradient(aliceblue, lightblue);
+    background-image: linear-gradient(white,  rgba(253, 251, 131, 0.75));
     border: none;
     box-shadow: 0 0 4px -1px #ccc;
-    transition: all 200ms ease-in;
+    text-transform: uppercase;
+    letter-spacing: 1px;
 }
 .notes article input[type=submit]:hover {
-    color: dodgerblue;
-    letter-spacing: 2px;
+    background-image: linear-gradient(aliceblue, lightblue);
 }
 /* MQ */
 @media screen and (min-width: 768px){
@@ -196,10 +202,10 @@ header nav a:hover {
 .modal {
     width: 100%;
     background-color: rgb(22, 170, 255);
+    border-radius: 5px;
     box-shadow: 0 0 12px -1px black;
     top: 50%; left: 0;
     transform: translate(0, -50%);
-    border-radius: 5px;
     padding: 20px 20px 0;
 }
 .modal h3 {
@@ -236,14 +242,15 @@ header nav a:hover {
     height: 45px;
     color: white;
     background-color: transparent;
-    border: none;
     border: 2px solid white;
+    border-radius: 4px;
     padding: 5px 10px;
     width: 100%;
 }
 .modal textarea {
     min-height: 150px;
     padding-top: 10px;
+    resize: vertical;
 }
 .modal input:active,
 .modal input:focus,
@@ -258,22 +265,21 @@ header nav a:hover {
     font-size: 20px;
     height: 60px;
     color: #333;
-    background-color: aliceblue;
     background-image: linear-gradient(aliceblue, lightblue);
     border: none;
     box-shadow: 0 0 4px -1px black;
-    transition: all 200ms ease-in;
+    text-transform: uppercase;
+    letter-spacing: 1px;
 }
 .modal input[type=submit]:hover {
-    color: dodgerblue;
-    letter-spacing: 2px;
+    background-image: linear-gradient(white,  rgba(250, 249, 170, 0.75));
 }
 /* MQ */
 @media screen and (min-width: 768px){
     .modal {
         width: 50vw;
         max-width: 600px;
-        border: 10px outset rgba(255,255,255,0.5);
+        border: 8px solid rgba(255,255,255,0.5);
         box-shadow: none;
         top: 50%; left: 50%;
         transform: translate(-50%, -50%);
